add form on contact page and customize design

--- a/templates/Public/home.html.twig
+++ b/templates/Public/home.html.twig
@@ -1,10 +1,28 @@
 {% extends 'base.html.twig' %}
-{% block title %}<h1>Accueil Web CV</h1>{% endblock %} {% block body %}
-	<div class="container">
-		<div class="row center-align">
-			<h1>Accueil Web CV</h1>
-		</div>
-	</div>
+{% block title %}Accueil Web CV{% endblock %} {% block body %}
+	<div class="carousel carousel-slider center white-text ">
+	    <div class="carousel-item" href="#one!">
+	    	<img src="{{ asset('build/application.jpg') }}">
+	    	<div class="contentshome center-align">
+	    		<h2>Web CV</h2>
+	      		<p class="flow-text">Création de votre Cv</p>
+	    	</div>
+	    </div>
+	    <div class="carousel-item amber white-text" href="#two!">
+	    	<img src="{{ asset('build/entrepreneur.png') }}">
+	    	<div class="contentshome center-align">
+		      	<h2>A Propos de WEB CV</h2>
+		      	<p class="flow-text">Qu'elle est le but de ce site? Je vous dit tous!</p>
+		    </div>
+	    </div>
+	    <div class="carousel-item green white-text" href="#three!">
+	    	<img src="{{ asset('build/contact.jpg') }}">
+	    	<div class="contentshome center-align">
+		      	<h2>Des Questions ?</h2>
+		      	<p class="flow-text">Vous pouvez nous contacter!</p>
+		    </div>
+	    </div>
+  	</div>
 
 
 {% endblock %}
