--- a/templates/back/user/index.html.twig
+++ b/templates/back/user/index.html.twig
@@ -15,7 +15,7 @@
                 margin: auto;
             }
             .pad5{
-                padding: 5%;
+                padding: 2%;
             }
             .margtop{
                 position: absolute;
@@ -39,6 +39,7 @@
                                 <p><i class="material-icons blue-text text-lighten-4">person</i> Pour le "ROLE_USER" </p>
                                 <p><i class="material-icons teal-text text-lighten-4">person</i> Pour le "ROLE_USER_ADMIN" </p>
                                 <p><i class="material-icons lime-text text-accent-2">person</i> Pour le "ROLE_ADMIN" </p>
+                                <p class="flow-text">Un mail sera envoyer à l'utilisateur lui informant que sont status à changer.</p>
                                 <nav class="grey darken-1">
                                   <div class="nav-wrapper container90">
                                     <a href="#!" class="brand-logo">Filtre</a>
@@ -67,11 +68,11 @@
                             <table class="table striped br20 col s12 pad5">
                             <thead>
                                 <tr>
-                                    <th>Id</th>
-                                    <th>Name</th>
-                                    <th>Email</th>
-                                    <th>Roles</th>
-                                    <th>actions</th>
+                                    <th colspan="10%">Id</th>
+                                    <th colspan="15%">Name</th>
+                                    <th colspan="15%">Email</th>
+                                    <th colspan="15%">Roles</th>
+                                    <th colspan="45%">actions</th>
                                 </tr>
                             </thead>
                                 <tbody>
