--- a/templates/contact_information/_delete_form.html.twig
+++ b/templates/contact_information/_delete_form.html.twig
@@ -1,4 +1,4 @@
-<form method="post" action="{{ path('contact_information_delete', {'id': contact_information.id, 'idcv': cv}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('contact_information_delete', {'id': contact_information.id, 'idcv': cv}) }}" onsubmit="return confirm('Etes-vous sûr de vouloir supprimer ces coordonnées?');">
     <input type="hidden" name="_method" value="DELETE">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ contact_information.id) }}">
     <div class="row right">
