--- a/templates/back/user/edit.html.twig
+++ b/templates/back/user/edit.html.twig
@@ -3,12 +3,8 @@
 {% block title %}Edit User{% endblock %}
 
 {% block body %}
-    <h1>Edit User</h1>
+    <h1>Modifier un utilisateur</h1>
 
-    {{ include('user/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('back/user/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('user_index') }}">back to list</a>
-
-    {{ include('user/_delete_form.html.twig') }}
-    {{ include('user/loop.html.twig') }}
 {% endblock %}
