--- a/templates/center_interest/_delete_form.html.twig
+++ b/templates/center_interest/_delete_form.html.twig
@@ -1,4 +1,4 @@
-<form method="post" action="{{ path('center_interest_delete', {'id': center_interest.id,'idcv': cv}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('center_interest_delete', {'id': center_interest.id,'idcv': cv}) }}" onsubmit="return confirm('Etes-vous sûr de vouloir supprimer ce centre d'intérêt?');">
     <input type="hidden" name="_method" value="DELETE">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ center_interest.id) }}">
     <div class="row right">
