--- a/templates/certificate/_delete_form.html.twig
+++ b/templates/certificate/_delete_form.html.twig
@@ -1,4 +1,4 @@
-<form method="post" action="{{ path('certificate_delete', {'id': certificate.id, 'idcv': cv}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('certificate_delete', {'id': certificate.id, 'idcv': cv}) }}" onsubmit="return confirm('Etes-vous sûr de vouloir supprimer ce certificat?');">
     <input type="hidden" name="_method" value="DELETE">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ certificate.id) }}">
     <div class="row right">
