--- a/templates/cv/_delete_form.html.twig
+++ b/templates/cv/_delete_form.html.twig
@@ -1,4 +1,4 @@
-<form method="post" action="{{ path('cv_delete', {'id': cv}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('cv_delete', {'id': cv}) }}" onsubmit="return confirm('Etes-vous sûr de vouloir supprimer ce CV?');">
     <input type="hidden" name="_method" value="DELETE">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ cv) }}">
     <div class="row right">
