--- a/templates/professional_course/_delete_form.html.twig
+++ b/templates/professional_course/_delete_form.html.twig
@@ -1,4 +1,4 @@
-<form method="post" action="{{ path('professional_course_delete', {'id': professional_course.id, 'idcv':cv}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('professional_course_delete', {'id': professional_course.id, 'idcv':cv}) }}" onsubmit="return confirm('Etes-vous sûr de vouloir supprimer ce parcours professionnel?');">
     <input type="hidden" name="_method" value="DELETE">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ professional_course.id) }}">
     <div class="row right">
