--- a/templates/training/_delete_form.html.twig
+++ b/templates/training/_delete_form.html.twig
@@ -1,4 +1,4 @@
-<form method="post" action="{{ path('training_delete', {'id': training.id, 'idcv': cv}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('training_delete', {'id': training.id, 'idcv': cv}) }}" onsubmit="return confirm('Etes-vous sûr de vouloir supprimer cette formation?');">
     <input type="hidden" name="_method" value="DELETE">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ training.id) }}">
     <div class="row right">
