--- a/templates/Public/form.html.twig
+++ b/templates/Public/form.html.twig
@@ -1,13 +1,13 @@
 {{ form_start(form) }}
-    {#{ form_widget(form) }#}
+    
     <div class="row"> 
     		<div class="card br20 white col s8 offset-s2">
     			<div class="container">
     				<div class="row">
-	    				<div class="input-field col s4">
+	    				<div class="input-field col s8 offset-s2">
 							{{ form_row(form.name) }}
 						</div>
-						<div class="input-field col s8">
+						<div class="input-field col s8 offset-s2">
 		          			{{ form_row(form.email) }}
 	    				</div>
 	    			</div>
