--- a/templates/infos_perso/_form.html.twig
+++ b/templates/infos_perso/_form.html.twig
@@ -1,30 +1,32 @@
 
 {{ form_start(form) }}
-    {#{ form_widget(form) }#}
-    <div class="col s12 center-align">
-    	<div class="row">
-	        <div class="input-field col s8 offset-s2">
-		    	{{ form_row(form.avatar) }}
-		    </div>
-		</div>
-		 <div class="row">
-	        <div class="input-field col s8 offset-s2">
-		    	{{ form_row(form.firstname) }}
-		    </div>
-		</div>
-		 <div class="row">
-	        <div class="input-field col s8 offset-s2">
-		    	{{ form_row(form.name) }}
-		    </div>
-		</div>
-		 <div class="row">
-	        <div class="input-field col s8 offset-s2">
-		    	{{ form_row(form.jobtitle) }}
-		    </div>
-		</div>
-	    <div class="row">	
-	    	<button  class="green btn btn-large waves-effect waves-light">{{ button_label|default('Sauvegarder') }}</button>
-	    </div>
-    </div>
-    
+    	<div class="row"> 
+    		<div class="card br20 white col s8 offset-s2">
+    			<div class="container">
+    				<div class="row">
+	    				<div class="input-field col s8 offset-s2">
+					    	{{ form_row(form.avatar) }}
+					    </div>
+					</div>
+					 <div class="row">
+				        <div class="input-field col s8 offset-s2">
+					    	{{ form_row(form.firstname) }}
+					    </div>
+					</div>
+					 <div class="row">
+				        <div class="input-field col s8 offset-s2">
+					    	{{ form_row(form.name) }}
+					    </div>
+					</div>
+					 <div class="row">
+				        <div class="input-field col s8 offset-s2">
+					    	{{ form_row(form.jobtitle) }}
+					    </div>
+					</div>
+				    <div class="row center-align">	
+				    	<button  class="green btn btn-large waves-effect waves-light">{{ button_label|default('Sauvegarder') }}</button>
+				    </div>
+			    </div>
+    		</div>
+    	</div>
 {{ form_end(form) }}
