--- a/templates/langue/_form.html.twig
+++ b/templates/langue/_form.html.twig
@@ -1,13 +1,16 @@
 {{ form_start(form) }}
-    {#{ form_widget(form) }#}
-    <div class="row">
-	        <div class="input-field col s8 offset-s2">
-	        	{{ form_row( form.name) }}
-	        </div>
-	    </div>
-	    <div class="row">
-	        <div class="input-field col s8 offset-s2">
-    			<button  class="green btn btn-large waves-effect waves-light">{{ button_label|default('Sauvegarder') }}</button>
-    		</div>
-    	</div>
+    	<div class="row"> 
+    		<div class="card br20 white col s8 offset-s2">
+    			<div class="container">
+    				<div class="row">
+	    				<div class="input-field col s8 offset-s2">
+				        	{{ form_row( form.name) }}
+				        </div>
+				    </div>
+				    <div class="row center-align">
+			    			<button  class="green btn btn-large waves-effect waves-light">{{ button_label|default('Sauvegarder') }}</button>
+			    	</div>
+			    </div>
+			</div>
+		</div>
 {{ form_end(form) }}
